Minor db managers cleanup