@@ -2,7 +2,6 @@ package union.utils.database.managers;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import union.utils.database.LiteDBBase;
 import union.utils.database.DBUtil;
@@ -35,13 +34,13 @@ public class WebhookManager extends LiteDBBase {
 	public String getToken(String webhookId) {
 		Object data = selectOne(TABLE, "token", "webhookId", webhookId);
 		if (data == null) return null;
-		return String.valueOf(data);
+		return (String) data;
 	}
 
 	public List<String> getIds(String guildId) {
 		List<Object> objs = select(TABLE, "webhookId", "guildId", guildId);
 		if (objs.isEmpty()) return Collections.emptyList();
-		return objs.stream().map(obj -> String.valueOf(obj)).collect(Collectors.toList());
+		return objs.stream().map(obj -> (String) obj).toList();
 	}
 
 }
